@@ -1,5 +1,6 @@
 varying vec2 texCoord;
 uniform sampler2D tex;
+uniform vec2 texSize;
 
 void main() {
 	vec4 color = texture2D(tex, texCoord);
@@ -14,8 +15,8 @@ void main() {
 	arrayY[2] = vec3(1.0, 1.0, 1.0);
 	arrayY[3] = vec3(0.9, 0.9, 0.9);
 	color.rgb = pow(color.rgb, vec3(1.6, 1.6, 1.6));
-	color.rgb *= arrayX[int(mod(texCoord.s * 960.0, 4.0))];
-	color.rgb *= arrayY[int(mod(texCoord.t * 640.0, 4.0))];
+	color.rgb *= arrayX[int(mod(texCoord.s * texSize.x * 4.0, 4.0))];
+	color.rgb *= arrayY[int(mod(texCoord.t * texSize.y * 4.0, 4.0))];
 	color.a = 0.8;
 	gl_FragColor = color;
 }
