@@ -43,6 +43,7 @@ Misc:
  - ARM7: Support forcing Thumb mode via MSR
  - ARM7: Flush prefetch cache when loading CPSR via MSR
  - Qt: Canonicalize file paths when loading games
+ - OpenGL: Add texSize uniform
 
 0.4.0: (2016-02-02)
 Features:
